[package]
name = "under"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
tokio = { version = "0.2.22", features = ["fs"] }
thiserror = "1.0.20"
anyhow = "1.0.32"
regex = "1.3.9"
log = "0.4.11"
lazy_static = "1.4.0"
http = "0.2.1"
bytes = "0.5.6"
mime_guess = "2.0.3"
