[package]
name = "under"
version = "0.1.0"
authors = ["Jeremy Rodi <me@telios.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.13", features = ["server", "stream", "tcp", "http1", "http2"] }
tokio = { version = "1.12.0", features = ["fs"] }
thiserror = "1.0.29"
anyhow = "1.0.44"
regex = "1.5.4"
log = "0.4.14"
lazy_static = "1.4.0"
http = "0.2.5"
bytes = "1.1.0"
mime_guess = "2.0.3"
tower = "0.4.8"
tower-http = "0.1.1"
futures = { version = "0.3.17", default-features = false, features = ["std", "async-await"] }
tokio-util = { version = "0.6.8", features = ["io"] }
async-trait = "0.1.51"
serde = { version = "1.0.130" }
serde_json = "1.0.68"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
