[package]
name = "under"
description = "A simple HTTP server framework."
version = "0.3.5"
authors = ["Jeremy Rodi <me@telios.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/medcat/under"
readme = "README.md"
keywords = ["async", "http", "web", "server", "framework"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cookie", "sse", "from_form", "json"]
sse = ["async-sse", "tokio-util"]
from_form = ["form_urlencoded", "phf", "unicase", "under_derive"]
json = ["serde_json", "serde"]
cbor = ["ciborium", "serde"]
msgpack = ["rmp-serde", "serde"]

[dependencies]
hyper = { version = "0.14.22", features = ["server", "stream", "tcp", "http1", "http2"] }
tokio = { version = "1.21.2", features = ["fs"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
regex = "1.6.0"
log = "0.4.17"
lazy_static = "1.4.0"
http = "0.2.8"
bytes = "1.2.1"
mime_guess = "2.0.4"
tower = "0.4.13"
tower-http = "0.3.4"
futures = { version = "0.3.25", default-features = false, features = ["std", "async-await"] }
async-trait = "0.1.58"
mime = "0.3.16"
serde_qs = "0.9.2"
pin-project = "1.0.12"

# for now, it is optional, dependent on `from_form` as a feature, but it could
# be added as a full dependency in the future.
[dependencies.under_derive]
version = "=0.2.4"
optional = true
path = "../under_derive"

[dependencies.form_urlencoded]
version = "1.1.0"
optional = true

[dependencies.unicase]
version = "2.6.0"
optional = true

[dependencies.phf]
version = "0.11.1"
optional = true
features = ["macros", "serde", "unicase"]

[dependencies.cookie]
version = "0.16.1"
features = ["percent-encode"]
optional = true

[dependencies.async-sse]
version = "5.1.0"
optional = true

[dependencies.tokio-util]
version = "0.7.4"
features = ["io", "compat"]
optional = true

[dependencies.serde]
 version = "1.0.147"
 features = ["derive"]
 optional = true

[dependencies.serde_json]
version = "1.0.87"
optional = true

[dependencies.ciborium]
version = "0.2"
optional = true

[dependencies.rmp-serde]
version = "1.1"
optional = true

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
