[package]
name = "under_derive"
description = "Macros for the under package."
version = "0.2.4"
authors = ["Jeremy Rodi <me@telios.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/medcat/under"
readme = "README.md"
keywords = ["async", "http", "web", "server", "framework"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "under_derive"
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.51"
quote = "1.0.23"

[dependencies.syn]
version = "1.0.109"
features = ['extra-traits', 'full']
